<resources>
    <string name="app_name">The Wedding Path</string>
    <string name="img_desc_grass_path">A lush green garden grass path background.</string>
    <string name="App_Title">The Wedding Path</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login_help">Already on the path?</string>
    <string name="login_button">Continue your journey</string>
    <string name="divider">—  or  —</string>
    <string name="new_account_help">New to the path?</string>
    <string name="new_account_button">Begin your journey</string>
    <string name="vendor_name">Vendor Name</string>
    <string name="contact_person">Contact Person</string>
    <string name="phone_number">Phone Number</string>
    <string name="address">Address</string>
    <string name="notes">Notes</string>
    <string name="add_event">+ Add Event</string>
    <string name="delete_vendor">Delete Vendor</string>
    <string name="vendor_info">Vendor Info</string>
    <string name="appointments_amp_deadlines"><![CDATA[Appointments & Deadlines]]></string>
    <string name="event_name">Event Name</string>
    <string name="date_time">Date / Time</string>
    <string name="delete_event">Delete Event</string>
    <string name="send_sms_reminder_on_day_of_event">Send SMS Reminder on Day of Event</string>
    <string name="sms_notification_enabled">SMS Notification Enabled</string>
    <string name="save_vendor">Save Vendor</string>
</resources>