<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="@dimen/stone_elevation"
    tools:layout_marginTop="24dp"
    app:cardBackgroundColor="?attr/colorSecondary"
    app:cardCornerRadius="@dimen/spacing_small"
    app:cardElevation="@dimen/stone_elevation">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/spacing_small">

        <TextView
            android:id="@+id/tv_event_name"
            android:layout_width="0dp"
            android:layout_height="21dp"
            android:text="@string/event_name"
            android:textAppearance="?attr/textAppearanceTitleMedium"
            android:textColor="?attr/colorOnSecondary"
            app:layout_constraintEnd_toStartOf="@id/btn_delete_event"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_event_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/date_time"
            android:textAppearance="?attr/textAppearanceBodyMedium"
            android:textColor="?attr/colorOnSecondary"
            app:layout_constraintEnd_toStartOf="@id/btn_delete_event"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_event_name" />

        <ImageButton
            android:id="@+id/btn_delete_event"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="8dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/delete_event"
            android:src="@android:drawable/ic_menu_delete"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:tint="?attr/colorOnSecondary" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>