<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/grass_path">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="80dp"
        android:fillViewport="true"
        android:background="?attr/android:colorBackground">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/spacing_medium">

            <TextView
                android:id="@+id/tv_screen_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/spacing_medium"
                android:layout_marginTop="@dimen/spacing_large"
                android:text="@string/vendor_info"
                android:textAppearance="?attr/textAppearanceHeadlineMedium"
                android:textColor="?attr/colorPrimary"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_vendor_name"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/spacing_medium"
                android:layout_marginTop="@dimen/spacing_medium"
                app:layout_constraintWidth_max="@dimen/txt_constraintWidth_max"
                android:hint="@string/vendor_name"
                android:textColorHint="?attr/colorSurfaceVariant"
                app:boxStrokeColor="?attr/colorSecondary"
                app:hintTextColor="?attr/colorSecondary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_screen_title">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_vendor_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="textPersonName|textCapWords"
                    android:textColor="?attr/colorOnSurface" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_contact"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/spacing_medium"
                android:layout_marginTop="@dimen/spacing_small"
                app:layout_constraintWidth_max="@dimen/txt_constraintWidth_max"
                android:hint="@string/contact_person"
                android:textColorHint="?attr/colorSurfaceVariant"
                app:boxStrokeColor="?attr/colorSecondary"
                app:hintTextColor="?attr/colorSecondary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/til_vendor_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_contact"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="textPersonName|textCapWords"
                    android:textColor="?attr/colorOnSurface" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_phone"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/spacing_medium"
                android:layout_marginTop="@dimen/spacing_small"
                app:layout_constraintWidth_max="@dimen/txt_constraintWidth_max"
                android:hint="@string/phone_number"
                android:textColorHint="?attr/colorSurfaceVariant"
                app:boxStrokeColor="?attr/colorSecondary"
                app:hintTextColor="?attr/colorSecondary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/til_contact">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="phone"
                    android:textColor="?attr/colorOnSurface" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_address"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/spacing_medium"
                android:layout_marginTop="@dimen/spacing_small"
                app:layout_constraintWidth_max="@dimen/txt_constraintWidth_max"
                android:hint="@string/address"
                android:textColorHint="?attr/colorSurfaceVariant"
                app:boxStrokeColor="?attr/colorSecondary"
                app:hintTextColor="?attr/colorSecondary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/til_phone">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="textPostalAddress"
                    android:textColor="?attr/colorOnSurface" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_notes"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/spacing_medium"
                android:layout_marginTop="@dimen/spacing_small"
                app:layout_constraintWidth_max="@dimen/txt_constraintWidth_max"
                app:boxStrokeColor="?attr/colorSecondary"
                app:hintTextColor="?attr/colorSecondary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/til_address">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_notes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top|start"
                    android:hint="@string/notes"
                    android:textColorHint="?attr/colorSurfaceVariant"
                    android:inputType="textMultiLine|textCapSentences"
                    android:scrollbars="vertical"
                    android:overScrollMode="always"
                    android:maxLines="3"
                    android:lines="3"
                    android:textColor="?attr/colorOnSurface" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_save_vendor"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/spacing_medium"
                android:layout_marginTop="@dimen/spacing_medium"
                android:text="@string/save_vendor"
                app:layout_constraintWidth_max="@dimen/btn_constraintWidth_max"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/til_notes" />

            <TextView
                android:id="@+id/tv_events_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_medium"
                android:layout_marginTop="@dimen/spacing_medium"
                android:text="@string/appointments_amp_deadlines"
                android:textAppearance="?attr/textAppearanceTitleLarge"
                android:textColor="?attr/colorPrimary"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_save_vendor" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_add_event"
                style="@style/Widget.Material3.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/spacing_medium"
                android:text="@string/add_event"
                app:layout_constraintBottom_toBottomOf="@id/tv_events_header"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/tv_events_header" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switch_sms_reminder"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/spacing_medium"
                android:layout_marginTop="@dimen/spacing_small"
                android:text="@string/send_sms_reminder_on_day_of_event"
                android:textAppearance="?attr/textAppearanceBodyLarge"
                android:textColor="?attr/colorPrimary"
                app:layout_constraintWidth_max="@dimen/btn_constraintWidth_max"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_events_header"
                app:useMaterialThemeColors="true" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_sub_events"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:layout_marginHorizontal="@dimen/spacing_medium"
                android:layout_marginTop="@dimen/spacing_small"
                android:clipToPadding="false"
                android:paddingBottom="@dimen/spacing_medium"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_sub_event"
                tools:itemCount="3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/switch_sms_reminder" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_delete_vendor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacing_medium"
            android:layout_marginBottom="@dimen/spacing_medium"
            android:text="@string/delete_vendor"
            android:textColor="?attr/colorOnError"
            app:backgroundTint="?attr/colorError"
            app:layout_constraintWidth_max="@dimen/btn_constraintWidth_max"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>